--- a/html/about.html
+++ b/html/about.html
@@ -81,7 +81,9 @@
 
         <div class="row mobile-hide">
           <div class="col-7">
+            <a href="/home">
             <img src="../assets/images/banner.png" height="40px"/>
+            </a>
           </div>
           <div class="col-5 right-txt">
             <div class="right-txt" style="float:right;">
@@ -407,7 +409,7 @@
   <!-- Page 1 -->
   <div class="ourProfiles fade-in">
     <div class="row">
-      <div class="col-lg-2 col-sm-3 col-6">
+      <!-- <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Zhilei_Zheng.png">
         <h4>Zhilei Zheng</h4>
         <h5>Technology Director</h5>
@@ -415,11 +417,16 @@
           <a href="https://www.linkedin.com/in/zhileiz/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
           <a href="http://www.zhileiz.com/" target="_blank"><i class="icofont icofont-link-alt"></i></a>
         </div>
-      </div>
+      </div> -->
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Ruoyang_Ni.jpeg">
         <h4>Rose Ni</h4>
-        <h5>President</h5>
+        <h5>Co-President</h5>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Shirley_Liu.jpeg">
+        <h4>Shirley Liu</h4>
+        <h5>Co-President</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Yijing_Liu.jpg">
@@ -430,21 +437,15 @@
         <img class="img-fluid" src="../assets/images/Yibo_Chen.jpg">
         <h4>Yibo Chen</h4>
         <h5>Vice President</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/yibo-chen-82ab51127/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="https://www.instagram.com/ybc18/" target="_blank"><i class="icofont icofont-social-instagram"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/George_Chen.jpg">
         <h4>George Chen</h4>
         <h5>Head of PR</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Appolos Liu</h4>
-        <h5>Head of Secretary</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Bryan Liang</h4>
-        <h5>Advisor</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Stephany_Li.jpg">
@@ -485,7 +486,7 @@
         <h5>Vice Chair</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+        <img class="img-fluid" src="../assets/images/Jichen_Zhang.jpg">
         <h4>Phillip Zhang</h4>
         <h5>Vice Chair</h5>
       </div>
@@ -497,14 +498,14 @@
           <a href="https://www.linkedin.com/in/davidchenpenn/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
-      <div class="col-lg-2 col-sm-3 col-6">
+      <!-- <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Rachel Wu</h4>
         <h5>Member</h5>
         <div class="links">
           <a href="https://www.linkedin.com/in/rachelyueqiwu/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
-      </div>
+      </div> -->
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Jipeng_Liu.jpg">
         <h4>Jipeng Tony Liu</h4>
@@ -514,7 +515,7 @@
           <a href="https://www.facebook.com/profile.php?id=100009588560522" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
         </div>
       </div>
-      <div class="col-lg-2 col-sm-3 col-6">
+      <!-- <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Qihao Yao</h4>
         <h5>Member</h5>
@@ -528,7 +529,7 @@
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>William Sun</h4>
         <h5>Member</h5>
-      </div>
+      </div> -->
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Echo_Zeng.jpg">
         <h4>Echo Zeng</h4>
@@ -546,17 +547,25 @@
           <a href="https://www.facebook.com/kang.samuel" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
         </div>
       </div>
-      <div class="col-lg-2 col-sm-3 col-6">
+      <!-- <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Mingyu Li</h4>
         <h5>Member</h5>
-      </div>
+      </div> -->
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Yilin_Ma.jpg">
         <h4>Yilin Elina Ma</h4>
         <h5>Member</h5>
         <div class="links">
           <a href="https://www.linkedin.com/in/yilin-elina-ma-29a5a1138/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Qiaochu_Guo.jpg">
+        <h4>Qiaochu Guo</h4>
+        <h5>Member</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/chen-kitty-154925134" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -572,7 +581,7 @@
         <h4>Marianne Xiong</h4>
         <h5>Member</h5>
       </div>
-      <div class="col-lg-2 col-sm-3 col-6">
+      <!-- <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Juliette Zhu</h4>
         <h5>Member</h5>
@@ -586,7 +595,7 @@
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Lawrence Lu</h4>
         <h5>Member</h5>
-      </div>
+      </div> -->
     </div>
   </div>
   <!-- Page 3 -->
@@ -598,25 +607,20 @@
         <h5>Vice Chair</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+        <img class="img-fluid" src="../assets/images/Yilin_Liu.png">
         <h4>Elaine Liu</h4>
         <h5>Vice Chair</h5>
       </div>
-      <div class="col-lg-2 col-sm-3 col-6">
+      <!-- <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Ashling Sui</h4>
         <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Michelle Zhan</h4>
-        <h5>Member</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Tracy Yan</h4>
         <h5>Member</h5>
-      </div>
+      </div> -->
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Sai_Ma.jpg">
         <h4>Sai William Ma</h4>
@@ -637,7 +641,7 @@
         <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/Sherry_Guo.jpg">
+        <img class="img-fluid" src="../assets/images/Xinning_Guo.png">
         <h4>Xinning Guo</h4>
         <h5>Member</h5>
       </div>
@@ -666,11 +670,11 @@
           <a href="https://www.facebook.com/Michelle.Cai04" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
-      <div class="col-lg-2 col-sm-3 col-6">
+      <!-- <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Tony Zheng</h4>
         <h5>Member</h5>
-      </div>
+      </div> -->
     </div>
   </div>
   <!-- Page 4 -->
@@ -697,7 +701,7 @@
           <a href="https://www.linkedin.com/in/ying-chen-959202126/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
-      <div class="col-lg-2 col-sm-3 col-6">
+      <!-- <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>William Sun</h4>
         <h5>Member</h5>
@@ -719,7 +723,7 @@
         <div class="links">
           <a href="https://www.linkedin.com/in/yixi-wang-272087158/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
-      </div>
+      </div> -->
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Lei_Wang.jpg">
         <h4>Lei Wang</h4>
@@ -728,7 +732,7 @@
           <a href="https://www.linkedin.com/in/lei-wang-084a64158/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
-      <div class="col-lg-2 col-sm-3 col-6">
+      <!-- <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Lisa Yijie Zhao</h4>
         <h5>Member</h5>
@@ -736,7 +740,7 @@
           <a href="https://www.linkedin.com/in/lisa-zhao-48093b146/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
           <a href="https://www.facebook.com/lisa.zhao.1485" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
         </div>
-      </div>
+      </div> -->
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Gaorui_Liu.jpg">
         <h4>Ray Liu</h4>
@@ -747,7 +751,7 @@
         <h4>Wenyao Yang</h4>
         <h5>Member</h5>
       </div>
-      <div class="col-lg-2 col-sm-3 col-6">
+      <!-- <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Wenhui Zhao</h4>
         <h5>Member</h5>
@@ -756,7 +760,7 @@
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Thomas Wang</h4>
         <h5>Member</h5>
-      </div>
+      </div> -->
     </div>
   </div>
   <!-- Page 5 -->
@@ -770,11 +774,11 @@
           <a href="https://www.linkedin.com/in/xiaoya-sabrina-song-b0919b127/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
-      <div class="col-lg-2 col-sm-3 col-6">
+      <!-- <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Julia Chen</h4>
         <h5>Member</h5>
-      </div>
+      </div> -->
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Chelsie_Xu.jpg">
         <h4>Chelsie Xu</h4>
@@ -783,14 +787,14 @@
           <a href="https://www.linkedin.com/in/chelsie-xu-532951149/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
-      <div class="col-lg-2 col-sm-3 col-6">
+      <!-- <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Shangting Sun</h4>
         <h5>Member</h5>
         <div class="links">
           <a href="https://www.facebook.com/lucy.sun.16" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
         </div>
-      </div>
+      </div> -->
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Claire_Yu.jpg">
         <h4>Claire Yu</h4>
@@ -810,7 +814,7 @@
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+        <img class="img-fluid" src="../assets/images/Cynthia_Li.png">
         <h4>Cynthia Li</h4>
         <h5>Member</h5>
         <div class="links">
@@ -824,11 +828,11 @@
   <div class="ourProfiles fade-in">
     <div class="row">
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+        <img class="img-fluid" src="../assets/images/Yitao_Ding.jpg">
         <h4>Jeff Ding</h4>
         <h5>Vice Chair</h5>
       </div>
-      <div class="col-lg-2 col-sm-3 col-6">
+      <!-- <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Grace Guo</h4>
         <h5>Vice Chair</h5>
@@ -842,7 +846,7 @@
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Lingpei Zhou</h4>
         <h5>Member</h5>
-      </div>
+      </div> -->
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Carol_Zhou.jpeg">
         <h4>Carol Zhou</h4>
