--- a/html/agenda-ch.html
+++ b/html/agenda-ch.html
@@ -79,7 +79,9 @@
 
         <div class="row mobile-hide">
           <div class="col-7">
+            <a href="/home">
             <img src="../assets/images/banner.png" height="40px"/>
+            </a>
           </div>
           <div class="col-5 right-txt">
             <div class="right-txt" style="float:right;">
@@ -326,7 +328,7 @@
               Irvine Auditorium
             </div>
             <div class="item-desc">
-              <span style="font-family: avn-demi">嘉宾</span><br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾</span><br/>
               (将于近期揭晓)
             </div>
           </div>
@@ -342,7 +344,7 @@
             </div>
             <div class="item-desc">
               在这个充满机遇的时间节点，企业该如何实现从传统模式到新模式的平稳过渡？<br/>
-              <span style="font-family: avn-demi">嘉宾</span><br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾</span><br/>
               (将于近期揭晓)
             </div>
             <div class="item-title">
@@ -353,7 +355,7 @@
             </div>
             <div class="item-desc">
               以创新科技为核心的新产业将对传统行业造成怎样的冲击？<br/>
-              <span style="font-family: avn-demi">嘉宾</span><br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾</span><br/>
               (将于近期揭晓)
             </div>
           </div>
@@ -369,7 +371,7 @@
             </div>
             <div class="item-desc">
               近年的行业大转型为娱乐以及时尚产业带来了怎样的影响？<br/>
-              <span style="font-family: avn-demi">嘉宾</span><br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾</span><br/>
               (将于近期揭晓)
             </div>
             <div class="item-title">
@@ -380,7 +382,7 @@
             </div>
             <div class="item-desc">
               留学生应如何理解习主席和特朗普总统达成的共识以及“一代一路”的意义？<br/>
-              <span style="font-family: avn-demi">嘉宾</span><br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾</span><br/>
               (将于近期揭晓)
             </div>
           </div>
@@ -427,7 +429,7 @@
             </div>
             <div class="item-desc">
               投资者们该如何驾驭中国市场持续的监管变化、科技产业动荡等多重因素？<br/>
-              <span style="font-family: avn-demi">嘉宾</span><br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾</span><br/>
               (将于近期揭晓)
             </div>
             <div class="item-title">
@@ -438,7 +440,7 @@
             </div>
             <div class="item-desc">
               企业家们如何看待企业可持续发展与社会责任，并对未来有怎样的展望？<br/>
-              <span style="font-family: avn-demi">嘉宾</span><br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾</span><br/>
               (将于近期揭晓)
             </div>
           </div>
@@ -453,7 +455,7 @@
               Irvine Auditorium
             </div>
             <div class="item-desc">
-              <span style="font-family: avn-demi">嘉宾</span><br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾</span><br/>
               (将于近期揭晓)
             </div>
           </div>
