--- a/html/agenda.html
+++ b/html/agenda.html
@@ -79,7 +79,9 @@
 
         <div class="row mobile-hide">
           <div class="col-7">
+            <a href="/home">
             <img src="../assets/images/banner.png" height="40px"/>
+            </a>
           </div>
           <div class="col-5 right-txt">
             <div class="right-txt" style="float:right;">
@@ -326,7 +328,7 @@
               Irvine Auditorium
             </div>
             <div class="item-desc">
-              <span style="font-family: avn-demi">Speakers:</span><br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">Speakers:</span><br/>
               (To Be Announced)
             </div>
           </div>
@@ -342,7 +344,7 @@
             </div>
             <div class="item-desc">
               In this pivotal moment of transformation, how should the traditional real estate industry adjust smoothly into this new era, and how should companies adapt based on their unique characteristics instead of blindly following the trend?<br/>
-              <span style="font-family: avn-demi">Speakers:</span><br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">Speakers:</span><br/>
               (To Be Announced)
             </div>
             <div class="item-title">
@@ -353,7 +355,7 @@
             </div>
             <div class="item-desc">
               How will new forces shape the trajectories of technology development in China and in the world? As college students, how should we leverage surrounding opportunities to make a dent in the universe?<br/>
-              <span style="font-family: avn-demi">Speakers:</span><br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">Speakers:</span><br/>
               (To Be Announced)
             </div>
           </div>
@@ -369,7 +371,7 @@
             </div>
             <div class="item-desc">
               What would already-established figures say about current Chinese fashion and entertainment, and what are their opinions on the impact that an increasing influx of capital has on the industry? <br/>
-              <span style="font-family: avn-demi">Speakers:</span><br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">Speakers:</span><br/>
               (To Be Announced)
             </div>
             <div class="item-title">
@@ -380,7 +382,7 @@
             </div>
             <div class="item-desc">
               In today's world, how should students make sense of the consensus between the two presidents of China and the U.S. as well as the significance of the Belt and Road initiative?<br/>
-              <span style="font-family: avn-demi">Speakers:</span><br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">Speakers:</span><br/>
               (To Be Announced)
             </div>
           </div>
@@ -427,7 +429,7 @@
             </div>
             <div class="item-desc">
               With continuous regulatory changes, constant technological industry disruptions, and rising valuations across major asset classes, how can global investors better navigate the volatile but evolving Chinese market and economy?<br/>
-              <span style="font-family: avn-demi">Speakers:</span><br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">Speakers:</span><br/>
               (To Be Announced)
             </div>
             <div class="item-title">
@@ -438,7 +440,7 @@
             </div>
             <div class="item-desc">
               What are the thoughts of outstanding entrepreneurs on the status, problems, solutions, and future prospects of sustainable development and social responsibility of Chinese enterprises?<br/>
-              <span style="font-family: avn-demi">Speakers:</span><br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">Speakers:</span><br/>
               (To Be Announced)
             </div>
           </div>
@@ -453,7 +455,7 @@
               Irvine Auditorium
             </div>
             <div class="item-desc">
-              <span style="font-family: avn-demi">Speakers:</span><br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">Speakers:</span><br/>
               (To Be Announced)
             </div>
           </div>
