--- a/html/panels-ch.html
+++ b/html/panels-ch.html
@@ -80,7 +80,9 @@
 
         <div class="row mobile-hide">
           <div class="col-7">
+            <a href="/home">
             <img src="../assets/images/banner.png" height="40px"/>
+            </a>
           </div>
           <div class="col-5 right-txt">
             <div class="right-txt" style="float:right;">
@@ -284,7 +286,7 @@
                 <p>全球的投资者们该如何更好的驾驭中国市场持续的监管变化、科技产业动荡、以及主要资产类别估值上升等多重因素？中国又会在新一轮全球化中占领何种地位？</p>
                 <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Annenberg Center</p>
                 <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; 4月15日, 10:00am - 12:00am</p>
-                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; 语言：中文</p>
+                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; 语言：英文</p>
               </div>
             </div>
           </div>
@@ -297,29 +299,29 @@
               </div>
             </div>
             <div class="row">
-              <!-- <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/cuitiankai.jpg"/>
-                <div class="speaker-name">Tiankai Cui</div>
-                <div class="speaker-title">Chinese Ambassador</div>
+              <div class="col-6 center-txt speaker-item">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/lining.jpg"/>
-                <div class="speaker-name">Li Ning</div>
-                <div class="speaker-title">CEO of Li-Ning</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/panshiyi.jpg"/>
-                <div class="speaker-name">Shiyi Pan</div>
-                <div class="speaker-title">CEO of SOHO China</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/leijun2.jpg"/>
-                <div class="speaker-name">Lei Jun</div>
-                <div class="speaker-title">CEO of XiaoMi</div>
-              </div> -->
-              <div class="col-12 center-txt">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
+              </div>
+              <!-- <div class="col-12 center-txt">
                 <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -335,29 +337,29 @@
               </div>
             </div>
             <div class="row">
-              <!-- <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/cuitiankai.jpg"/>
-                <div class="speaker-name">Tiankai Cui</div>
-                <div class="speaker-title">Chinese Ambassador</div>
+              <div class="col-6 center-txt speaker-item">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/lining.jpg"/>
-                <div class="speaker-name">Li Ning</div>
-                <div class="speaker-title">CEO of Li-Ning</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/panshiyi.jpg"/>
-                <div class="speaker-name">Shiyi Pan</div>
-                <div class="speaker-title">CEO of SOHO China</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/leijun2.jpg"/>
-                <div class="speaker-name">Lei Jun</div>
-                <div class="speaker-title">CEO of XiaoMi</div>
-              </div> -->
-              <div class="col-12 center-txt">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
+              </div>
+              <!-- <div class="col-12 center-txt">
                 <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="col-md-6 col-sm-12">
@@ -396,7 +398,7 @@
                 <p>在佛罗里达州海湖庄园，习近平主席向特朗普总统表示，“我们有一千条理由把中美关系搞好，没有一条理由把中美关系搞坏”。两国领导人就双方在各层级、各领域加强沟通已达成许多共识。当今时代，如何理解习主席和特朗普总统的这些共识，以及“一代一路”倡议的意义？很多人，特别是学生，想了解这些重大的首脑会晤和论坛能让他们如何受益？中美关系的走向对他们的生活会有什么影响？作为21世纪的青年学生，又能在哪些方面为发展中美关系出力？</p>
                 <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Annenberg Center</p>
                 <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; 4月14日, 12:30pm - 14:30pm</p>
-                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; 语言：中文</p>
+                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; 语言：英文</p>
               </div>
             </div>
           </div>
@@ -409,29 +411,29 @@
               </div>
             </div>
             <div class="row">
-              <!-- <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/cuitiankai.jpg"/>
-                <div class="speaker-name">Tiankai Cui</div>
-                <div class="speaker-title">Chinese Ambassador</div>
+              <div class="col-6 center-txt speaker-item">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/lining.jpg"/>
-                <div class="speaker-name">Li Ning</div>
-                <div class="speaker-title">CEO of Li-Ning</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/panshiyi.jpg"/>
-                <div class="speaker-name">Shiyi Pan</div>
-                <div class="speaker-title">CEO of SOHO China</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/leijun2.jpg"/>
-                <div class="speaker-name">Lei Jun</div>
-                <div class="speaker-title">CEO of XiaoMi</div>
-              </div> -->
-              <div class="col-12 center-txt">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
+              </div>
+              <!-- <div class="col-12 center-txt">
                 <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -447,29 +449,29 @@
               </div>
             </div>
             <div class="row">
-              <!-- <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/cuitiankai.jpg"/>
-                <div class="speaker-name">Tiankai Cui</div>
-                <div class="speaker-title">Chinese Ambassador</div>
+              <div class="col-6 center-txt speaker-item">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/lining.jpg"/>
-                <div class="speaker-name">Li Ning</div>
-                <div class="speaker-title">CEO of Li-Ning</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/panshiyi.jpg"/>
-                <div class="speaker-name">Shiyi Pan</div>
-                <div class="speaker-title">CEO of SOHO China</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/leijun2.jpg"/>
-                <div class="speaker-name">Lei Jun</div>
-                <div class="speaker-title">CEO of XiaoMi</div>
-              </div> -->
-              <div class="col-12 center-txt">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
+              </div>
+              <!-- <div class="col-12 center-txt">
                 <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="col-md-6 col-sm-12">
@@ -522,29 +524,29 @@
               </div>
             </div>
             <div class="row">
-              <!-- <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/cuitiankai.jpg"/>
-                <div class="speaker-name">Tiankai Cui</div>
-                <div class="speaker-title">Chinese Ambassador</div>
+              <div class="col-6 center-txt speaker-item">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/lining.jpg"/>
-                <div class="speaker-name">Li Ning</div>
-                <div class="speaker-title">CEO of Li-Ning</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/panshiyi.jpg"/>
-                <div class="speaker-name">Shiyi Pan</div>
-                <div class="speaker-title">CEO of SOHO China</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/leijun2.jpg"/>
-                <div class="speaker-name">Lei Jun</div>
-                <div class="speaker-title">CEO of XiaoMi</div>
-              </div> -->
-              <div class="col-12 center-txt">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
+              </div>
+              <!-- <div class="col-12 center-txt">
                 <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -560,29 +562,29 @@
               </div>
             </div>
             <div class="row">
-              <!-- <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/cuitiankai.jpg"/>
-                <div class="speaker-name">Tiankai Cui</div>
-                <div class="speaker-title">Chinese Ambassador</div>
+              <div class="col-6 center-txt speaker-item">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/lining.jpg"/>
-                <div class="speaker-name">Li Ning</div>
-                <div class="speaker-title">CEO of Li-Ning</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/panshiyi.jpg"/>
-                <div class="speaker-name">Shiyi Pan</div>
-                <div class="speaker-title">CEO of SOHO China</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/leijun2.jpg"/>
-                <div class="speaker-name">Lei Jun</div>
-                <div class="speaker-title">CEO of XiaoMi</div>
-              </div> -->
-              <div class="col-12 center-txt">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
+              </div>
+              <!-- <div class="col-12 center-txt">
                 <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="col-md-6 col-sm-12">
@@ -598,7 +600,7 @@
                 <p>“我们这一代”不只是善于创新，敢于挑战的一代，更是勇于承担社会责任，践行可持续发展的一代。在中国经济结构转型的今天，许多社会问题逐步凸显，国家十三五规划和可持续发展目标的实施面临着诸多机遇和挑战。在各方探索者和实践者的努力，以及商业、媒体、科技、创新和文化等元素的融入之下，中国的公益慈善行业正在呈积极态势发展。对企业来讲，社会价值的实现与商业价值同样重要，公益元素可以帮助企业品牌与文化的建设、社会影响力的提升以及战略的转型；对公益机构来讲，社会各界资源的联动有利于社会问题的改善和解决；对政府和媒体来讲，关注社会议题，推动社会发展，传播社会正能量一直都是刚需。因此，本次分论坛将邀请优秀的企业家讨论中国企业可持续发展与社会责任的现状、问题、解决方案和未来展望。</p>
                 <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Irvine Auditorium</p>
                 <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; 4月14日, 3:00pm - 5:00pm</p>
-                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; 语言：英文</p>
+                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; 语言：中文</p>
               </div>
             </div>
           </div>
