--- a/html/panels.html
+++ b/html/panels.html
@@ -80,7 +80,9 @@
 
         <div class="row mobile-hide">
           <div class="col-7">
+            <a href="/home">
             <img src="../assets/images/banner.png" height="40px"/>
+            </a>
           </div>
           <div class="col-5 right-txt">
             <div class="right-txt" style="float:right;">
@@ -284,7 +286,7 @@
                 <p>With continuous regulatory changes, constant technological industry disruptions, and rising valuations across major asset classes, how can investors prepare themselves to capitalize on the new wave of opportunities in China? What role should China play in the next generation of Globalization?</p>
                 <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Annenberg Center</p>
                 <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 15th, 10:00am - 12:00am</p>
-                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; Language: Chinese</p>
+                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; Language: English</p>
               </div>
             </div>
           </div>
@@ -297,29 +299,29 @@
               </div>
             </div>
             <div class="row">
-              <!-- <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/cuitiankai.jpg"/>
-                <div class="speaker-name">Tiankai Cui</div>
-                <div class="speaker-title">Chinese Ambassador</div>
+              <div class="col-6 center-txt speaker-item">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/lining.jpg"/>
-                <div class="speaker-name">Li Ning</div>
-                <div class="speaker-title">CEO of Li-Ning</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/panshiyi.jpg"/>
-                <div class="speaker-name">Shiyi Pan</div>
-                <div class="speaker-title">CEO of SOHO China</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/leijun2.jpg"/>
-                <div class="speaker-name">Lei Jun</div>
-                <div class="speaker-title">CEO of XiaoMi</div>
-              </div> -->
-              <div class="col-12 center-txt">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
+              </div>
+              <!-- <div class="col-12 center-txt">
                 <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -335,29 +337,29 @@
               </div>
             </div>
             <div class="row">
-              <!-- <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/cuitiankai.jpg"/>
-                <div class="speaker-name">Tiankai Cui</div>
-                <div class="speaker-title">Chinese Ambassador</div>
+              <div class="col-6 center-txt speaker-item">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/lining.jpg"/>
-                <div class="speaker-name">Li Ning</div>
-                <div class="speaker-title">CEO of Li-Ning</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/panshiyi.jpg"/>
-                <div class="speaker-name">Shiyi Pan</div>
-                <div class="speaker-title">CEO of SOHO China</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/leijun2.jpg"/>
-                <div class="speaker-name">Lei Jun</div>
-                <div class="speaker-title">CEO of XiaoMi</div>
-              </div> -->
-              <div class="col-12 center-txt">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
+              </div>
+              <!-- <div class="col-12 center-txt">
                 <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="col-md-6 col-sm-12">
@@ -396,7 +398,7 @@
                 <p>In today's world, how do we make sense of the consensus between the two presidents and the significance of the Belt and Road initiative? From these significant summits and forums, many people, particularly the students, want to know what the takeaways are for them. What will be the impact of the Sino-US relationship on their lives? What can the 21st century students specifically contribute to help strengthen the two countries’ relationship?</p>
                 <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Annenberg Center</p>
                 <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 14th, 12:30pm - 14:30pm</p>
-                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; Language: Chinese</p>
+                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; Language: English</p>
               </div>
             </div>
           </div>
@@ -409,29 +411,29 @@
               </div>
             </div>
             <div class="row">
-              <!-- <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/cuitiankai.jpg"/>
-                <div class="speaker-name">Tiankai Cui</div>
-                <div class="speaker-title">Chinese Ambassador</div>
+              <div class="col-6 center-txt speaker-item">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/lining.jpg"/>
-                <div class="speaker-name">Li Ning</div>
-                <div class="speaker-title">CEO of Li-Ning</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/panshiyi.jpg"/>
-                <div class="speaker-name">Shiyi Pan</div>
-                <div class="speaker-title">CEO of SOHO China</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/leijun2.jpg"/>
-                <div class="speaker-name">Lei Jun</div>
-                <div class="speaker-title">CEO of XiaoMi</div>
-              </div> -->
-              <div class="col-12 center-txt">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
+              </div>
+              <!-- <div class="col-12 center-txt">
                 <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -447,29 +449,29 @@
               </div>
             </div>
             <div class="row">
-              <!-- <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/cuitiankai.jpg"/>
-                <div class="speaker-name">Tiankai Cui</div>
-                <div class="speaker-title">Chinese Ambassador</div>
+              <div class="col-6 center-txt speaker-item">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/lining.jpg"/>
-                <div class="speaker-name">Li Ning</div>
-                <div class="speaker-title">CEO of Li-Ning</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/panshiyi.jpg"/>
-                <div class="speaker-name">Shiyi Pan</div>
-                <div class="speaker-title">CEO of SOHO China</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/leijun2.jpg"/>
-                <div class="speaker-name">Lei Jun</div>
-                <div class="speaker-title">CEO of XiaoMi</div>
-              </div> -->
-              <div class="col-12 center-txt">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
+              </div>
+              <!-- <div class="col-12 center-txt">
                 <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="col-md-6 col-sm-12">
@@ -523,29 +525,29 @@
               </div>
             </div>
             <div class="row">
-              <!-- <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/cuitiankai.jpg"/>
-                <div class="speaker-name">Tiankai Cui</div>
-                <div class="speaker-title">Chinese Ambassador</div>
+              <div class="col-6 center-txt speaker-item">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/lining.jpg"/>
-                <div class="speaker-name">Li Ning</div>
-                <div class="speaker-title">CEO of Li-Ning</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/panshiyi.jpg"/>
-                <div class="speaker-name">Shiyi Pan</div>
-                <div class="speaker-title">CEO of SOHO China</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/leijun2.jpg"/>
-                <div class="speaker-name">Lei Jun</div>
-                <div class="speaker-title">CEO of XiaoMi</div>
-              </div> -->
-              <div class="col-12 center-txt">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
+              </div>
+              <!-- <div class="col-12 center-txt">
                 <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -561,29 +563,29 @@
               </div>
             </div>
             <div class="row">
-              <!-- <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/cuitiankai.jpg"/>
-                <div class="speaker-name">Tiankai Cui</div>
-                <div class="speaker-title">Chinese Ambassador</div>
+              <div class="col-6 center-txt speaker-item">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/lining.jpg"/>
-                <div class="speaker-name">Li Ning</div>
-                <div class="speaker-title">CEO of Li-Ning</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/panshiyi.jpg"/>
-                <div class="speaker-name">Shiyi Pan</div>
-                <div class="speaker-title">CEO of SOHO China</div>
+                <img class="speaker-img" src="../assets/images/placeholder-female.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
               </div>
               <div class="col-6 center-txt speaker-item">
-                <img class="speaker-img" src="../assets/images/leijun2.jpg"/>
-                <div class="speaker-name">Lei Jun</div>
-                <div class="speaker-title">CEO of XiaoMi</div>
-              </div> -->
-              <div class="col-12 center-txt">
+                <img class="speaker-img" src="../assets/images/placeholder-male.jpg"/>
+                <div class="speaker-name">Speaker</div>
+                <div class="speaker-title">To Be Announced</div>
+              </div>
+              <!-- <div class="col-12 center-txt">
                 <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="col-md-6 col-sm-12">
@@ -602,7 +604,7 @@
                 <p>Therefore, our panel will invite outstanding entrepreneurs to discuss the status, problems, solutions and future prospects of sustainable development and social responsibility of Chinese enterprises. </p>
                 <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Irvine Auditorium</p>
                 <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 14th, 3:00pm - 5:00pm</p>
-                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; Language: English</p>
+                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; Language: Chinese</p>
               </div>
             </div>
           </div>
