--- a/html/past.html
+++ b/html/past.html
@@ -78,7 +78,9 @@
 
         <div class="row mobile-hide">
           <div class="col-7">
+            <a href="/home">
             <img src="../assets/images/banner.png" height="40px"/>
+            </a>
           </div>
           <div class="col-5 right-txt">
             <div class="right-txt" style="float:right;">
